Prueba solución error mapas (2)

--- a/TeLoBusco/TeLoBusco/Views/Pedidos/SeguimientoPedido.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/SeguimientoPedido.cshtml
@@ -88,7 +88,7 @@ else
             latOrigenPedido = latOrigenPedido.replace(",", ".");
             var numLat = parseFloat(latOrigenPedido);
 
-            lngOrigenPedido = lngOrigenPedido.replace(".", "");
+            //lngOrigenPedido = lngOrigenPedido.replace(".", "");
             lngOrigenPedido = lngOrigenPedido.replace(",", ".");
             var numLng = parseFloat(lngOrigenPedido);
             console.log("Coordenadas  no num");
