--- a/TeLoBusco/TeLoBusco/Views/Pedidos/SeguimientoPedido.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Pedidos/SeguimientoPedido.cshtml
@@ -84,7 +84,7 @@ else
             var latOrigenPedido = $("#latOrigen").val();
             var lngOrigenPedido = $("#lngOrigen").val();
 
-            latOrigenPedido = latOrigenPedido.replace(".", "");
+            //latOrigenPedido = latOrigenPedido.replace(".", "");
             latOrigenPedido = latOrigenPedido.replace(",", ".");
             var numLat = parseFloat(latOrigenPedido);
 
@@ -101,7 +101,7 @@ else
                 console.log("Coordenadas num");
                 console.log(numLat);
                 console.log(numLng);
-                initMap(16, latOrigenPedido, lngOrigenPedido)
+                initMap(16, numLat, numLng)
             }
             else {
                 initMap(15, -31.2531394, -61.4937747)
