Inicio en Pedidos/Index
* Ahora cada vez que vallamos a inicio o toquemos el logo, seremos redireccionados a Pedidos/Index (si estamos logueados).
* El Home/Index solo es accesible desde URL o cuando ingresamos por primera vez al sitio.
*Desde el Home/Index puedo llegar a Pedidos/Index a través de Pedidos/inicio

--- a/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark navbar-custom navbar-margin-bottom">
-        <a class="navbar-brand navbar-title" href="/Home/Index">
+        <a class="navbar-brand navbar-title" href="/Pedidos/Index">
             <img src="~/Images/logo.png" class="logo" width="92" height="52" alt="Logo">
             Wappo
         </a>
@@ -26,12 +26,11 @@
             {
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/Home/Index">Inicio</a>
+                        <a class="nav-link" href="/Pedidos/Index">Inicio</a>
                     </li>
                     <li class="nav-item dropdown active">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Pedidos<span class="sr-only">(current)</span></a>
                         <div class="dropdown-menu bg-black">
-                            <a class="dropdown-item itemsPrincipal" href="/Pedidos/Index">Inicio</a>
                             <a class="dropdown-item itemsPrincipal" href="/Pedidos/Create">Nuevo pedido</a>
                             <a class="dropdown-item itemsPrincipal" href="/Pedidos/PedidosCliente">Mis pedidos</a>
                             <div class="dropdown-divider bg-dark"></div>
