--- a/TeLoBusco/TeLoBusco/Views/Postulaciones/Postulacion.cshtml
+++ b/TeLoBusco/TeLoBusco/Views/Postulaciones/Postulacion.cshtml
@@ -80,9 +80,16 @@
                 <!-- BOTÓN PUBLICAR PEDIDO -->
                 <div class="row">
                     <div class="form-group" style="margin-left: auto; margin-right: auto;">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="¡Aceptar postulación!" class="btn btn-default" />
-                        </div>
+                        @if (Model.Estado == "Aceptado")
+                        {
+                            <label><b>Ya aceptó esta postulación.</b></label>
+                        }
+                        else
+                        {
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="¡Aceptar postulación!" class="btn btn-default" />
+                            </div>   
+                        }
                     </div>
                 </div>
             }
